Revision history for idi

{{$NEXT}}
    - Fix copyright year - Ugh. :\

0.0202    2022-01-02 23:41:11 PST
    - Fix documentation.

0.0201    2022-01-02 23:23:15 PST
    - Make w() optional.

0.0200    2022-01-02 22:54:26 PST
    - Print the midi file to STDOUT on END by default.
    - Improve documentation.

0.0102    2021-12-26 15:51:24 PST
    - Fix exports.

0.0101    2021-12-26 15:37:19 PST
    - Fix documentation.

0.0100    2021-12-26 15:28:14 PST
    - Mint with Dist::Zilla.